--- a/Net66.Entity/Net66.Entity.csproj
+++ b/Net66.Entity/Net66.Entity.csproj
@@ -80,6 +80,7 @@
     <Compile Include="IO_Model\IWareHouse.cs" />
     <Compile Include="IO_Model\MobiResult.cs" />
     <Compile Include="IO_Model\OFloor.cs" />
+    <Compile Include="IO_Model\OSensor.cs" />
     <Compile Include="IO_Model\OWareHouse.cs" />
     <Compile Include="IO_Model\ReturnClass.cs" />
     <Compile Include="Models\Alarm.cs" />
