--- a/Net66.Service/Net66.Service.csproj
+++ b/Net66.Service/Net66.Service.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Controllers\GranaryController.cs" />
     <Compile Include="Controllers\HeapController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\SensorController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
