最后一次提交

--- a/Net66.Data/Net66.Data.csproj
+++ b/Net66.Data/Net66.Data.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Base\Error.cs" />
     <Compile Include="Base\SqlComm.cs" />
     <Compile Include="Base\SqlHelper.cs" />
+    <Compile Include="Context\DbEntity.cs" />
     <Compile Include="Context\DbGrain.cs" />
     <Compile Include="Context\GrainContext.cs" />
     <Compile Include="DatabaseInitializer.cs" />
