--- a/Net66.Entity/Net66.Entity.csproj
+++ b/Net66.Entity/Net66.Entity.csproj
@@ -72,6 +72,7 @@
     <Compile Include="DR_Model\UserInfo.cs" />
     <Compile Include="DR_Model\WareHouse.cs" />
     <Compile Include="DR_Model\WareHouse_Log.cs" />
+    <Compile Include="IO_Model\Account.cs" />
     <Compile Include="IO_Model\ISensorBase.cs" />
     <Compile Include="IO_Model\OGranaryReport.cs" />
     <Compile Include="IO_Model\OGrainsReport.cs" />
@@ -124,6 +125,14 @@
     <Compile Include="Models\WareHouse_Log.cs" />
     <Compile Include="Models\SensorBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RightsSys_Model\Sys_Department.cs" />
+    <Compile Include="RightsSys_Model\Sys_Menu.cs" />
+    <Compile Include="RightsSys_Model\Sys_MenuOperation.cs" />
+    <Compile Include="RightsSys_Model\Sys_MenuRoleOperation.cs" />
+    <Compile Include="RightsSys_Model\Sys_Operation.cs" />
+    <Compile Include="RightsSys_Model\Sys_Role.cs" />
+    <Compile Include="RightsSys_Model\Sys_RoleUser.cs" />
+    <Compile Include="RightsSys_Model\Sys_UserInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
