--- a/Net66.Service/Net66.Service.csproj
+++ b/Net66.Service/Net66.Service.csproj
@@ -196,6 +196,13 @@
     <Compile Include="Controllers\HeapController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SensorController.cs" />
+    <Compile Include="Controllers\SysSec\AccountController.cs" />
+    <Compile Include="Controllers\SysSec\DepartmentController.cs" />
+    <Compile Include="Controllers\SysSec\MenuController.cs" />
+    <Compile Include="Controllers\SysSec\Menu_Role_OperationController.cs" />
+    <Compile Include="Controllers\SysSec\OperationController.cs" />
+    <Compile Include="Controllers\SysSec\RoleController.cs" />
+    <Compile Include="Controllers\SysSec\UserInfoController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -217,10 +224,17 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Account\" />
+    <Folder Include="Views\Department\" />
     <Folder Include="Views\Floor\" />
     <Folder Include="Views\GrainIot\" />
     <Folder Include="Views\Granary\" />
     <Folder Include="Views\Heap\" />
+    <Folder Include="Views\Menu\" />
+    <Folder Include="Views\Menu_Role_Operation\" />
+    <Folder Include="Views\Operation\" />
+    <Folder Include="Views\Role\" />
+    <Folder Include="Views\UserInfo\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
