权限管理后台功能完毕
Signed-off-by: yhw96160 <96160>

--- a/Net66.Comm/Net66.Comm.csproj
+++ b/Net66.Comm/Net66.Comm.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataOfDiffrent.cs" />
+    <Compile Include="EncryptAndDecrypte.cs" />
     <Compile Include="ExportExcel.cs" />
     <Compile Include="JsonConvertHelper.cs" />
     <Compile Include="Log4net.cs" />
