--- a/Net66.Service/Net66.Service.csproj
+++ b/Net66.Service/Net66.Service.csproj
@@ -111,6 +111,7 @@
     <Reference Include="System.Web.Http.SelfHost, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Web.Http.WebHost, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Web.Routing" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Runtime.Serialization" />
@@ -187,6 +188,19 @@
     <Compile Include="App_Start\IocConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Ashx\Controls\Handler.cs" />
+    <Compile Include="Ashx\Messages\BaseMessage.cs" />
+    <Compile Include="Ashx\Messages\EventMessage.cs" />
+    <Compile Include="Ashx\Messages\IotEventMessage.cs" />
+    <Compile Include="Ashx\Messages\IotJsonMessage.cs" />
+    <Compile Include="Ashx\Messages\LocationMessage.cs" />
+    <Compile Include="Ashx\Messages\Message.cs" />
+    <Compile Include="Ashx\Messages\MsgUtils.cs" />
+    <Compile Include="Ashx\Messages\MultimediaMessage.cs" />
+    <Compile Include="Ashx\Messages\TextMessage.cs" />
+    <Compile Include="Ashx\WebInit.ashx.cs">
+      <DependentUpon>WebInit.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Base\BaseAuthentication.cs" />
     <Compile Include="Base\Comm.cs" />
     <Compile Include="Controllers\FloorController.cs" />
@@ -213,6 +227,7 @@
   <ItemGroup>
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Views\Html5\UserBind.html" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -256,6 +271,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Ashx\WebInit.ashx" />
     <None Include="Properties\PublishProfiles\web.config.pubxml" />
   </ItemGroup>
   <PropertyGroup>
